...
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/EmailBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PhoneIdentifier"
        app:layout_constraintTop_toBottomOf="@+id/UserIDBox" />

    <EditText
        android:id="@+id/EmailBox"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ProviderCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EmailIdentifier"
        app:layout_constraintTop_toBottomOf="@+id/PhoneBox" />

    <EditText
        android:id="@+id/UserIDBox"
...
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onProviderClick"
        android:text="@string/Provider_Checkbox"
        app:layout_constraintBottom_toTopOf="@+id/PatientCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailBox" />

    <CheckBox
        android:id="@+id/PatientCheckBox"
...
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onPatientClick"
        android:text="@string/Patient_Checkbox"
        app:layout_constraintBottom_toTopOf="@+id/SignUpSaveButtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProviderCheckBox" />

    <Button
        android:id="@+id/SignUpSaveButtton"
...
